# hethcon

./: .stylish_haskell.yaml  .travis.yml  Dockerfile.base  Makefile  README.md  docker-compose.yaml  init.sql  stack-native.yaml  stack.yaml  web3-psql-example.cabal  web3-psql.cabal
data/: A.json  ERC20.json  ERC721.json  Exchange.json  KittyCore.json  UPort.json  WETH9.json
src/: Config.hs  Main.hs  Orphans.hs
src/Contracts/: A.hs  CryptoKitties.hs  ERC20.hs  ERC721.hs  Exchange.hs  KittyCore.hs  UPort.hs  WETH9.hs
