name:                web3-psql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/web3-psql#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable web3-psql
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , generics-sop
                     , selda
                     , web3
